# hephaestus-spl

./: hephaestus-spl.cabal  package.yaml  stack.yaml
app/: Main.hs
src/Data/: SPL.hs
src/Parser/: CK.hs
test/: CKTest.hs  Spec.hs  test.ck
